# audiosplit

./: README.md  pyproject.toml  requirements.txt
audiosplit/: __main__.py  cut.py  tui.py
