[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiosplit"
description = 'Splits audio files following a regex pattern'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "cbadger", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mutagen",
]
dev-dependencies = [
  "pytest",
  "pytest-cov",
]
# optional: textual
# optional: dev-dependencies
# optional: build-dependencies

# scripts = [
#   "audiosplit = audiosplit.__main__:main",
# ]
dynamic = ["version"]


[project.optional-dependencies]
tui = [
  "textual",
]


[project.package]
name = "audiosplit"
description = 'Splits audio files following a regex pattern'
readme = "README.md"

[project.urls]
Documentation = "https://github.com/fkr-0/audiosplit#readme"
Issues = "https://github.com/fkr-0/audiosplit/issues"
Source = "https://github.com/fkr-0/audiosplit"

[tool.hatch.version]
path = "audiosplit/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=audiosplit --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "audiosplit/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
